Webサーバ・CGIのソースコード公開に伴う変更

--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,16 @@
         </tr>
         <tr>
                 <td><a href="https://chouette2100.com:8443/cgi-bin/SC1/SC1/top">ShowroomCGI</a></td>
-                <td>笑われたらどうしよう、バカにされたらどうしよう、と思うと公開できません。    <br>
-                        根がお豆腐メンタルなもんで w<br>
-                        どなたか背中を押してください www</td>
-                <td><a href="https://zenn.dev/chouette2100/books/d8c28f8ff426b7/viewer/84023c">SHOWROOMのAPIで何ができるか？</a></td>
+                <td>
+                        <a href="https://github.com/Chouette2100/SRCGI">https://github.com/Chouette2100/SRCGI</a><br>
+                        <a href="https://github.com/Chouette2100/SRGSE5M">https://github.com/Chouette2100/SRGSE5M</a><br>
+                        <a href="https://github.com/Chouette2100/SRGPC">https://github.com/Chouette2100/SRGPC</a><br>
+                        <a href="https://github.com/Chouette2100/SRUEUI">https://github.com/Chouette2100/SRUEUI</a>
+                </td>
+                <td>
+                        <a href="https://zenn.dev/chouette2100/books/d8c28f8ff426b7/viewer/84023c">SHOWROOMのAPIで何ができるか？</a><br>
+                        <a href="https://zenn.dev/chouette2100/books/d8c28f8ff426b7/viewer/4fccae">『SHOWROOM イベント 獲得ポイント一覧』(1) 関連ソースの公開について</a>
+                </td>
                 <td style="width: 30%">SHOWROOMのAPIを使ったら何ができるか？ということでいろんなAPIを使って実際に作ったもの公開します。<br>
                         イベントでの配信者さんの獲得ポイントを取得し、いろいろな切り口で表示します。アクセス数がそんなに多くなさそうなので管理機能的なところも含めてご自由にお遊びください。</td>
         </tr>
